--- a/style.css
+++ b/style.css
@@ -176,3 +176,57 @@ body,
   background-color: #fff;
   cursor: pointer;
 }
+
+/* New Question Form */
+.d-none {
+  display: none;
+}
+
+#newQuestionForm {
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  margin: auto;
+  background-color: #222;
+  color: #fff;
+  padding: 1em 1.5em;
+}
+
+#newQuestionForm label {
+  display: flex;
+  flex-direction: column;
+}
+
+#newQuestionForm label {
+  margin-top: 1em;
+}
+
+#newQuestionForm label input {
+  display: block;
+  margin-top: .2em;
+  height: 1.5em;
+}
+
+.newQuestionAnswers {
+  margin-top: 2rem;
+}
+
+.newQuestionIndexes {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+#newQuestionForm input[type="submit"] {
+  display: block;
+  width: 10em;
+  margin: 2em auto 0;
+  padding: .5em;
+}
