--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body,
 }
 
 #newQuestionForm {
+  z-index: 99;
   display: flex;
   position: absolute;
   left: 0;
@@ -192,7 +193,7 @@ body,
   flex-direction: column;
   width: 100%;
   height: 100%;
-  max-width: 400px;
+  max-width: 450px;
   margin: auto;
   background-color: #222;
   color: #fff;
