--- a/style.css
+++ b/style.css
@@ -191,12 +191,12 @@ body,
   display: flex;
   position: absolute;
   left: 0;
-  top: 50px;
+  top: 100px;
   right: 0;
   bottom: 0;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 100px);
   max-width: 450px;
   margin: auto;
   background-color: #222;
