--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body,
   background-color: #023047;
   background-image: linear-gradient(#023047, #093949);
   max-width: 500px;
+  max-height: 800px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -99,6 +100,7 @@ body,
 
 .questionChoiceLabel {
   position: relative;
+  width: 100%;
   height: 3em;
   background-color: #fff;
   display: flex;
@@ -144,10 +146,11 @@ body,
 }
 
 .questionChoiceInput {
-  display: none;
+  opacity: 0;
 }
 
-.questionChoiceInput:checked + .questionChoiceLabel {
+.questionChoiceInput:checked + .questionChoiceLabel,
+.questionChoiceInput:focus + .questionChoiceLabel {
   outline-color: hsl(49, 100%, 64%);
 }
 
@@ -191,14 +194,15 @@ body,
   display: flex;
   position: absolute;
   left: 0;
-  top: 100px;
+  top: 80px;
   right: 0;
   bottom: 0;
   flex-direction: column;
   width: 100%;
   height: calc(100% - 100px);
-  max-width: 450px;
-  margin: auto;
+  max-height: 720px;
+  max-width: 500px;
+  margin: 0 auto;
   background-color: #222;
   color: #fff;
   padding: 1em 1.5em;
@@ -215,8 +219,8 @@ body,
 
 #newQuestionForm label input {
   display: block;
-  margin-top: .2em;
-  height: 1.5em;
+  margin-top: 0.2em;
+  padding: 0.5em;
 }
 
 .newQuestionAnswers {
@@ -227,11 +231,17 @@ body,
   text-align: center;
   display: flex;
   justify-content: space-around;
+  margin-top: 1em;
+}
+
+.newQuestionIndexes label {
+  padding: 0.75em 1.5em;
+  outline: 1px solid white;
 }
 
 #newQuestionForm input[type="submit"] {
   display: block;
   width: 10em;
-  margin: 2em auto 0;
-  padding: .5em;
+  margin: 3em auto 0;
+  padding: 0.5em;
 }
