--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body,
   display: none !important;
 }
 
+.intouchable {
+  pointer-events: none;
+}
+
 .container {
   background-color: #023047;
   background-image: linear-gradient(#023047, #093949);
@@ -75,22 +79,54 @@ body,
 
 .question {
   display: flex;
+  position: relative;
   flex-direction: column;
   height: 100%;
   background-color: #f5f3f4;
   padding: 16px 20px;
+  outline: 3px solid #00000055;
+  overflow: hidden;
+}
+
+.question::before {
+  position: absolute;
+  content: "Correct !";
+  width: 100%;
+  height: 2em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-weight: 600;
+  left: 0;
+  top: 0;
+  transform: scaleX(0);
+  transition: all 0.3s;
+  background-color: hsl(76, 100%, 50%);
+  border-bottom: 2px solid #0003;
+}
+
+.question::before {
+  color: #2220;
+}
+
+.question--correct::before {
+  transform: scaleX(1);
+  color: #222d;
 }
 
 .questionTitle {
   line-height: 1.1;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin-bottom: 12px;
   padding-bottom: 12px;
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 #questionChoices {
-  flex: 0 1 70%;
+  flex: 0 1 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -125,6 +161,10 @@ body,
   top: -1px;
   left: -1px;
   transition: inherit;
+}
+
+.questionChoiceLabel--faded {
+  color: #2222229e;
 }
 
 .questionChoiceLabel--correct {
@@ -185,9 +225,6 @@ body,
 }
 
 /* New Question Form */
-.d-none {
-  display: none;
-}
 
 #newQuestionForm {
   z-index: 99;
