--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body,
 .container {
   background-color: #023047;
   background-image: linear-gradient(#023047, #093949);
-  max-width: 500px;
+  max-width: 720px;
   max-height: 800px;
   margin: auto;
   display: flex;
@@ -154,6 +154,7 @@ body,
 .question::before {
   position: absolute;
   content: "Correct !";
+  z-index: 11;
   width: 100%;
   height: 2em;
   display: flex;
@@ -184,6 +185,7 @@ body,
   flex: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 #questionChoices {
@@ -362,7 +364,7 @@ body,
   bottom: 0;
   left: 0;
   background-color: #fff;
-  z-index: 55;
+  z-index: 10;
   padding: 16px 20px;
   display: flex;
   flex-direction: column;
@@ -374,17 +376,20 @@ body,
   flex: 0 1 40%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 #helpModal button {
   all: unset;
-  padding: 1em;
+  padding: 1em 1.5em;
   border: 1px solid #2225;
   font-size: 1.25rem;
   border-radius: 5px;
   background-color: hsl(49, 100%, 72%);
   box-shadow: 0 2px 3px #2225;
   cursor: pointer;
+  max-width: max-content;
+  margin: auto;
 }
 
 #helpModal button:hover,
@@ -408,4 +413,68 @@ body,
 
 .messageHidden {
   transform: scaleY(0);
+}
+
+/* Media queries */
+@media (min-width: 720px) {
+  .container {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .score {
+    font-size: 1.5rem;
+  }
+
+  .question::before {
+    font-size: 1.5rem;
+  }
+
+  #questionChoices {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    place-items: center;
+    flex-basis: 50%;
+    padding-top: 16px;
+  }
+
+  .questionTitle {
+    font-size: 2.25rem;
+  }
+
+  .questionChoiceLabel {
+    max-width: 80%;
+    font-size: 1.5rem;
+  }
+
+  label[for="option1"],
+  #option1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  label[for="option2"],
+  #option2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  label[for="option3"],
+  #option3 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  label[for="option4"],
+  #option4 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .actionBtn {
+    height: 100px;
+    font-size: 1.5rem;
+  }
+
+  .actionBtn span {
+    font-size: 1.5rem;
+  }
 }
