--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ body,
 
 #helpModal button {
   all: unset;
-  padding: 1em 1.5em;
+  padding: 0.75em 1.25em;
   border: 1px solid #2225;
   font-size: 1.25rem;
   border-radius: 5px;
@@ -405,10 +405,16 @@ body,
 #helpMessage {
   font-size: 1.25rem;
   background-color: hsl(49, 100%, 90%);
-  padding: 2em 1em;
+  padding: 0.5em 0.75em;
   flex: 1;
   transition: all 0.5s;
   transform-origin: top;
+  max-width: 50ch;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
 
 .messageHidden {
